--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.0.3",
@@ -21,20 +18,26 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "lucide-react": "^0.344.0",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/xterm": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
     "framer-motion": "^11.0.8",
-    "zustand": "^4.5.2",
+    "lucide-react": "^0.344.0",
+    "next": "14.2.0",
+    "prism-react-renderer": "^2.4.1",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-hot-toast": "^2.4.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.2.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
