BEAST MODE 2: Sessions, search, themes, agent mode, notebook, PWA
Features:
- Multiple chat sessions with tabs (create, rename, delete)
- Message search with result count
- Light/Dark theme toggle with persisted preference
- Agent Mode: type 'agent: <task>' for autonomous code→run→fix loop
- Notebook Mode: Jupyter-style cells with 16-language support
- PWA service worker for offline support + installability
- Updated manifest.json for 'Bob's Chat'

Components: AgentMode.tsx, NotebookMode.tsx
PWA: sw.js, manifest.json
Total new code: ~700 lines across 4 new files + page.tsx rewrite

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,19 @@
 {
-  "name": "OpenClaw UI",
-  "short_name": "OpenClaw",
-  "description": "Control your AI assistant",
-  "start_url": "/",
+  "name": "Bob's Chat",
+  "short_name": "Bob",
+  "description": "Chat with Bob - AI coding assistant",
+  "start_url": "/chat",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#3b82f6",
+  "orientation": "any",
+  "categories": ["developer", "productivity"],
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icon-192.svg",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ]
 }
