--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,18 @@
     {
       "src": "/icon-192.svg",
       "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ]
